Refactor application structure and enhance UI features
- Removed display.py and input_handler.py as part of the modular restructuring.
- Added new color constants for menu headers and selected items in config.py.
- Introduced dashboard settings for auto-cycling in config.py.
- Updated main.py to integrate new modular components for display and input handling.
- Enhanced README.md to reflect project structure and updated features.
- Improved requirements.txt to include psutil for system monitoring.
- Cleaned up sensor handling and logging across the application.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@
 
 # Core dependencies
 pygame==2.5.2       # For display and UI
-numpy==1.26.0       # For numerical operations, often used with sensor data
+numpy==1.26.0       # For numerical operations with sensor data
 
 # Raspberry Pi specific libraries
 sense-hat==2.6.0    # For Sense HAT sensor access
+
+# System monitoring
+psutil==5.9.6       # For system monitoring (CPU, memory, disk)
 
 # Optional utilities that might be useful
 matplotlib==3.8.0   # For advanced graphing capabilities (if needed)
