Update README, requirements, and app state for enhanced setup and new features
- Revised README.md to clarify installation steps and dependencies for the Sense HAT.
- Updated requirements.txt to include additional libraries for 3D model support.
- Added a new state for the Schematics viewer in app_state.py, along with input handling for the new state.
- Integrated the Schematics view into the display manager for future development.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,8 @@ psutil==5.9.6       # For system monitoring (CPU, memory, disk)
 
 # Optional utilities that might be useful
 matplotlib==3.8.0   # For advanced graphing capabilities (if needed)
+PyOpenGL
+PyOpenGL-accelerate
+pygltflib
+PyGLM
+Pillow
