Add environment variable support and enhance WiFi scanning functionality
- Updated .gitignore to include .env files for environment variable management.
- Added python-dotenv dependency to requirements files for loading environment variables.
- Enhanced WifiManager to support background scanning with loading operations, improving user experience during network scans.
- Updated InputRouter to handle network scanning states more effectively, integrating loading screens for better feedback.
- Refactored loading screen component for optimized display on 320x240 screens, ensuring better visibility and usability during loading operations.
- Improved error handling and status updates in WiFi settings view to provide clearer feedback to users.

--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -15,5 +15,8 @@ pygltflib==1.16.4   # GLTF file format support
 PyGLM==2.8.2        # OpenGL Mathematics library
 Pillow==11.2.1      # Python Imaging Library
 
+# Environment configuration
+python-dotenv==1.0.0  # For loading environment variables from .env file
+
 # Note: sense-hat is excluded as it's Raspberry Pi specific
 # Mock sensor data is provided for Windows development 
