--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ Pillow==11.2.1      # Python Imaging Library
 
 # Optional utilities
 matplotlib==3.8.0   # For advanced graphing capabilities (if needed)
+python-dotenv==1.0.0  # For loading environment variables from .env file
