--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ psutil==5.9.6       # For system monitoring (CPU, memory, disk)
 
 # 3D Graphics and OpenGL rendering
 PyOpenGL==3.1.9     # OpenGL bindings for Python
-PyOpenGL-accelerate==3.1.9  # Accelerated OpenGL operations (optional but recommended)
+#PyOpenGL-accelerate==3.1.9  # Accelerated OpenGL operations (optional but recommended)
 PyGLM==2.8.2        # OpenGL Mathematics library for 3D transformations
 
 # 3D Model support
