--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Requirements for the Tricorder Application
 
 # Core dependencies
-pygame==2.5.2       # For display and UI
-numpy==1.26.0       # For numerical operations with sensor data
+pygame==2.6.1
+numpy==2.3.0
 
 # Raspberry Pi specific libraries
 sense-hat==2.6.0    # For Sense HAT sensor access
 
 # System monitoring
-psutil==5.9.6       # For system monitoring (CPU, memory, disk)
+psutil==7.0.0
 
 # 3D Graphics and OpenGL rendering
 PyOpenGL==3.1.9     # OpenGL bindings for Python
@@ -22,5 +22,5 @@ pygltflib==1.16.4   # GLTF file format support for 3D models
 Pillow==11.2.1      # Python Imaging Library
 
 # Optional utilities
-matplotlib==3.8.0   # For advanced graphing capabilities (if needed)
-python-dotenv==1.0.0  # For loading environment variables from .env file
+matplotlib==3.10.3
+python-dotenv==1.1.0
