--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -15,6 +15,9 @@ pygltflib==1.16.5
 PyGLM==2.8.2        # OpenGL Mathematics library
 Pillow==11.3.0
 
+# Media player (audio + video via VLC; requires VLC app installed)
+python-vlc>=3.0.0
+
 # Environment configuration
 python-dotenv==1.1.1
 
