--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,9 @@ pygltflib==1.16.5
 # Image processing
 Pillow==11.3.0
 
+# Media player (audio + video via VLC in separate window)
+python-vlc>=3.0.0   # Requires VLC application installed on system (Windows / Raspberry Pi)
+
 # Optional utilities
 matplotlib==3.10.6
 python-dotenv==1.1.1
