Add mutagen dependency for MP4 metadata support and enhance media player functionality
- Added `mutagen` to `requirements.txt` and `requirements-windows.txt` for reading MP4 metadata.
- Implemented logic in `MediaPlayerManager` to use MP4 comments as display names for tracks.
- Updated media player view to reflect changes in track display and season browsing functionality.
- Removed duplicate media files to streamline asset management.

--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -17,6 +17,7 @@ Pillow==11.3.0
 
 # Media player (audio + video via VLC; requires VLC app installed)
 python-vlc>=3.0.0
+mutagen>=1.47.0     # Read MP4 metadata (Comment) for display name
 
 # Environment configuration
 python-dotenv==1.1.1
