--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -2,25 +2,25 @@
 
 # Core dependencies
 pygame==2.6.1
-numpy==2.3.3
+numpy==2.4.2
 
 # System monitoring
-psutil==7.1.0
+psutil==7.2.2
 
 # Graphics and rendering
-matplotlib==3.10.6
+matplotlib==3.10.8
 PyOpenGL==3.1.10
 PyOpenGL-accelerate==3.1.10
 pygltflib==1.16.5
-PyGLM==2.8.2        # OpenGL Mathematics library
-Pillow==11.3.0
+PyGLM==2.8.3
+Pillow==12.1.1
 
 # Media player (audio + video via VLC; requires VLC app installed)
 python-vlc>=3.0.0
 mutagen>=1.47.0     # Read MP4 metadata (Comment) for display name
 
 # Environment configuration
-python-dotenv==1.1.1
+python-dotenv==1.2.1
 
 # Note: sense-hat is excluded as it's Raspberry Pi specific
 # Mock sensor data is provided for Windows development 
