Add crew management features and update UI components
- Introduced crew menu and detail views to display crew members' images and names.
- Updated app state and input router to handle crew selection and navigation.
- Enhanced menu manager to generate crew list dynamically from assets.
- Added functionality to forget Wi-Fi networks and improved Wi-Fi settings UI.
- Adjusted Bluetooth manager to provide user feedback on toggle attempts.
- Updated .gitignore to include new media paths for crew images.

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,5 @@ wifi_scan_output.txt
 .env.example
 
 # Media under assets
-assets/media/
-assets/ship/
+/assets/media/
+/assets/ship/NCC Enterprise/
